--- a/ajouterProduit.xaml
+++ b/ajouterProduit.xaml
@@ -1,24 +1,28 @@
-<Window x:Class="LesDelicesDeTata.ajouterProduit"
+<Window x:Class="LesDelicesDeTata.AjouterProduit"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:local="clr-namespace:LesDelicesDeTata"
         mc:Ignorable="d"
-        Title="ajouterProduit" Height="450" Width="800">
+        Title="Ajouter Produit" Height="450" Width="800">
     <Grid>
         <StackPanel Margin="10">
             <TextBlock Text="Nom du produit:"/>
-            <TextBox x:Name="nomTextBox" Margin="0,0,0,10"/>
+            <TextBox x:Name="nomTextBox" Margin="0,0,0,10" Text="{Binding Nom, Mode=TwoWay}"/>
 
             <TextBlock Text="Description:"/>
-            <TextBox x:Name="descriptionTextBox" Margin="0,0,0,10"/>
+            <TextBox x:Name="descriptionTextBox" Margin="0,0,0,10" Text="{Binding Description, Mode=TwoWay}"/>
 
             <TextBlock Text="Prix:"/>
-            <TextBox x:Name="prixTextBox" Margin="0,0,0,10"/>
+            <TextBox x:Name="prixTextBox" Margin="0,0,0,10" Text="{Binding Prix, Mode=TwoWay}"/>
 
             <TextBlock Text="Image URL:"/>
-            <TextBox x:Name="imageTextBox" Margin="0,0,0,10"/>
+            <TextBox x:Name="imageTextBox" Margin="0,0,0,10" Text="{Binding Image, Mode=TwoWay}"/>
+            
+            <TextBlock Text="Catégorie:"/>
+            <ComboBox x:Name="categorieComboBox" DisplayMemberPath="NomCateg" SelectedValuePath="CategorieId" 
+                      Margin="0,0,0,10" ItemsSource="{Binding Categorie}" SelectedItem="{Binding SelectedCategory, Mode=TwoWay}"/>
 
             <Button Content="Ajouter" Click="Ajouter_Click"/>
         </StackPanel>
