--- a/EditProduit.xaml
+++ b/EditProduit.xaml
@@ -10,7 +10,7 @@
         <!-- Interface utilisateur pour la modification du produit -->
         <StackPanel>
             <TextBlock Text="ID du Produit" />
-            <TextBlock Text="{Binding ProduitId}" />
+            <TextBlock Text="{Binding id}" />
 
             <!-- Vous pouvez utiliser des TextBox, ComboBox, etc., pour permettre à l'utilisateur de modifier les propriétés -->
             <TextBlock Text="Nom du Produit" />
@@ -20,7 +20,7 @@
             <TextBox Text="{Binding Description, Mode=TwoWay}" />
             
             <TextBlock Text="Prix du Produit" />
-            <TextBox Text="{Binding Prix, Mode=TwoWay}" />
+            <TextBox Text="{Binding Prix, Mode=TwoWay}"/>
             
             <!-- Ajoutez d'autres contrôles pour les autres propriétés du produit -->
             <!-- Notez que nous n'incluons pas la propriété "id" car elle ne doit pas être modifiable par l'utilisateur -->
